# snapit

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  capture-controls.html  capture-toolbar.html  components.json  countdown.html  dcomp-toolbar.html  eslint.config.js  index.html  overlay.html  package-lock.json  package.json  recording-border.html  recording-controls.html  tailwind.config.js  video-editor.html  vite.config.ts  vitest.config.ts  webcam-preview.html
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-01-16-code-quality-improvements.md
mockups/: capture-library-hardware-v1.html  capture-library-hardware-v2.html  capture-library-hardware-v3.html  capture-library-hardware-v4.html  capture-section-v1-hero.html  capture-section-v10-hardware.html  capture-section-v11-panels.html  capture-section-v2-command.html  capture-section-v3-ambient.html  capture-section-v4-editorial.html  capture-section-v5-floating.html  capture-section-v6-tabs.html  capture-section-v7-cards.html  capture-section-v8-inline.html  capture-section-v9-neumorphic.html  image-editor-hardware-v1.html  video-editor-hardware-v1.html
scripts/: bump-version.cjs  generate-tray-icon.html  generate-wallpaper-thumbnails.cjs  local-build.ps1  sync-version.cjs  update-test-server.js
snapit-api/: README.md  package-lock.json  package.json  wrangler.toml
snapit-api/src/: index.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/crates/camera-windows/: Cargo.toml
src-tauri/crates/camera-windows/src/: lib.rs
src-tauri/crates/scap/: Cargo.toml
src-tauri/crates/scap-direct3d/: Cargo.toml
src-tauri/crates/scap-direct3d/src/: lib.rs  windows_version.rs
src-tauri/crates/scap-targets/: Cargo.toml
src-tauri/crates/scap-targets/src/: bounds.rs  lib.rs  win.rs
src-tauri/crates/scap/src/: lib.rs  main.rs
src-tauri/crates/scap/src/capturer/: mod.rs
src-tauri/crates/scap/src/capturer/engine/linux/: mod.rs  portal.rs
src-tauri/crates/scap/src/capturer/engine/mac/: mod.rs
src-tauri/crates/scap/src/capturer/engine/win/: mod.rs
src-tauri/crates/scap/src/targets/: mod.rs
src-tauri/crates/scap/src/targets/mac/: mod.rs
src-tauri/crates/scap/src/targets/win/: mod.rs
src-tauri/examples/: list_audio.rs
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/app/: events.rs  mod.rs  tray.rs
src-tauri/src/commands/: AGENTS.md  capture_overlay.rs  capture_settings.rs  dcomp_overlay.rs  fonts.rs  image.rs  keyboard_hook.rs  logging.rs  mod.rs  preview.rs  screenshot.rs  settings.rs  storage.rs  toolbar_position.rs  win_utils.rs  window.rs
src-tauri/src/commands/capture/: fallback.rs  mod.rs  types.rs  wgc.rs
src-tauri/src/commands/capture_overlay/: commands.rs  mod.rs  render.rs  state.rs  tests.rs  types.rs  wndproc.rs
src-tauri/src/commands/capture_overlay/graphics/: compositor.rs  d2d.rs  d3d.rs  mod.rs
src-tauri/src/commands/capture_overlay/input/: hit_test.rs  mod.rs  window_detect.rs
src-tauri/src/commands/storage/: ffmpeg.rs  mod.rs  operations.rs  tests.rs  types.rs
src-tauri/src/commands/video_recording/: audio.rs  audio_monitor.rs  audio_multitrack.rs  audio_sync.rs  audio_wasapi.rs  d3d_capture.rs  desktop_icons.rs  ffmpeg_gif_encoder.rs  gif_encoder.rs  gpu_editor.rs  master_clock.rs  mod.rs  recorder.rs  scap_capture.rs  state.rs  timestamp.rs  types.rs  video_export.rs  video_project.rs  wgc_capture.rs
src-tauri/src/commands/video_recording/cursor/: capture.rs  composite.rs  events.rs  highlight.rs  mod.rs
src-tauri/src/commands/video_recording/fragmentation/: manifest.rs  mod.rs
src-tauri/src/commands/video_recording/recorder/: backend.rs  buffer.rs  capture_source.rs  gif.rs  helpers.rs  mod.rs  video.rs
src-tauri/src/commands/video_recording/video_project/: auto_zoom.rs  frames.rs  metadata.rs  mod.rs  types.rs
src-tauri/src/commands/video_recording/webcam/: camera.wgsl  camera_yuv.wgsl  capture.rs  channel_encoder.rs  composite.rs  device.rs  drift.rs  encoder.rs  feed.rs  gpu_preview.rs  mod.rs  native_frame.rs  preview.rs  preview_manager.rs  segmented.rs
src-tauri/src/commands/window/: capture.rs  image_editor.rs  mod.rs  recording.rs  settings.rs  toolbar.rs  video_editor.rs
src-tauri/src/config/: app.rs  mod.rs  recording.rs  webcam.rs
src-tauri/src/cursor/: events.rs  mod.rs
src-tauri/src/cursor/capture/: mod.rs  position.rs  recorder.rs
src-tauri/src/cursor/info/: mod.rs  shape.rs
src-tauri/src/preview/: decoder.rs  frame_ws.rs  mod.rs  native_surface.rs
src-tauri/src/rendering/: AGENTS.md  background.rs  compositor.rs  coord.rs  cursor.rs  decoder.rs  editor_instance.rs  exporter.rs  mod.rs  renderer.rs  renderer_state.rs  scene.rs  stream_decoder.rs  svg_cursor.rs  text.rs  text_layer.rs  types.rs  zoom.rs
src-tauri/src/rendering/exporter/: encoder_selection.rs  ffmpeg.rs  frame_ops.rs  mod.rs  pipeline.rs  tests.rs  webcam.rs
src-tauri/src/rendering/shaders/: gradient-or-color.wgsl  image-background.wgsl
src/constants/: cursors.ts  index.ts  layout.ts  storage.ts  timing.ts  wallpapers.ts
src/contexts/: VideoEditorContext.tsx
src/hooks/: AGENTS.md  hooks.test.ts  useAppEventListeners.ts  useAppInitialization.ts  useAudioLevel.ts  useCanvasNavigation.ts  useCaptureActions.test.ts  useCaptureActions.ts  useCompositorBackground.ts  useCropTool.ts  useCursorInterpolation.ts  useEditorActions.ts  useEditorHistory.ts  useEditorKeyboardShortcuts.ts  useEditorPersistence.ts  useFastImage.ts  useKeyboardShortcuts.ts  useMarqueeSelection.ts  useMiddleMousePan.ts  usePlaybackEngine.ts  usePreviewStream.ts  useProjectAnnotations.ts  useRecordingEvents.ts  useRustAudioLevels.ts  useSceneMode.ts  useSelectionEvents.ts  useShapeCursor.ts  useShapeDrawing.ts  useShapeTransform.ts  useTextEditing.ts  useTheme.test.ts  (+9 more)
wasm/text-renderer/: Cargo.toml  build.ps1
wasm/text-renderer/src/: lib.rs
windows/: image-editor.html  settings.html
(+207 files in other folders)
