[package]
name = "snapit"
version = "0.2.4"
description = "A Snagit-like screen capture and annotation tool"
authors = ["SnapIt"]
edition = "2021"

[lib]
name = "snapit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Screen capture - primary (Windows Graphics Capture API with transparency support)
windows-capture = "1.4"

# Screen capture - fallback
xcap = "0.7"

# Image processing
image = "0.25"

# Base64 encoding
base64 = "0.22"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Random ID generation
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_DirectWrite",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
] }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = true
