[package]
name = "snapit"
version = "0.4.3"
description = "A Snagit-like screen capture and annotation tool"
authors = ["SnapIt"]
edition = "2021"

[lib]
name = "snapit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
ffmpeg-sidecar = "2.4"
dirs = "5"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# TypeScript type generation (single source of truth for Rust <-> TS types)
ts-rs = "10"

# Screen capture - xcap for screenshots (reliable, no padding issues)
xcap = "0.8"

# Screen capture - windows-capture for video recording and window capture
windows-capture = "2.0.0-alpha.7"

# Clean D3D capture infrastructure (ported from Cap)
scap-direct3d = { path = "crates/scap-direct3d" }
scap-targets = { path = "crates/scap-targets" }

# Native Windows camera capture (ported from Cap)
snapit-camera-windows = { path = "crates/camera-windows" }

# Image processing
image = "0.25"

# Audio capture
cpal = "0.17"
wasapi = "0.22"  # WASAPI loopback for system audio capture
hound = "3.5"    # WAV file encoding for separate audio tracks

# Native webcam capture via Media Foundation
nokhwa = { version = "0.10", features = ["input-msmf"] }

# Thread-safe channels for audio/video sync
crossbeam-channel = "0.5"

# Fast unbounded/bounded channels for webcam frames
flume = "0.11"

# Lazy static for global state
lazy_static = "1.5"

# Directory paths
dirs = "5"

# Base64 encoding
base64 = "0.22"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Random ID generation
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# Cryptography (for cursor image deduplication)
sha2 = "0.10"

# FFmpeg for video thumbnail generation (bundled binary)
ffmpeg-sidecar = "2.4"

# GPU-accelerated rendering for video editor
wgpu = "25"
pollster = "0.4"        # Block on async for wgpu initialization
bytemuck = { version = "1", features = ["derive"] }  # Safe buffer casting

# Easing/animation
bezier_easing = "0.1"

# SVG rendering for cursor icons
resvg = "0.44"

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Parking lot for faster mutexes
parking_lot = "0.12"

# Cross-platform cursor position (like Cap uses)
device_query = "2.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
# Note: We access WebView2 via raw COM pointers to avoid version conflicts
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Foundation_Numerics",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_System_Com",
    "Win32_Storage_Xps",
    # Media Foundation for fast webcam capture
    "Win32_Media_MediaFoundation",
    "implement",
] }
windows-core = "0.58"


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort" # Higher performance by disabling panic handlers.
strip = true
