[package]
name = "text-renderer-wasm"
version = "0.1.0"
edition = "2021"
description = "WebGPU text renderer for browser preview"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WebGPU rendering - match main app version for compatibility
wgpu = { version = "25", features = ["webgpu", "webgl"] }

# Text rendering - v0.9 matches main app
glyphon = "0.9"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web APIs
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    "GpuCanvasContext",
    "GpuCanvasConfiguration",
    "GpuTextureFormat",
    "GpuTexture",
    "GpuTextureView",
    "Navigator",
    "console",
    "Response",
    "Headers",
] }

# Logging
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

# Serialization for text segment data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
