[package]
name = "snapit-camera-windows"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
thiserror = "1"
parking_lot = "0.12"
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60", features = [
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Performance",
    "Win32_System_WinRT",
    "Win32_Foundation",
] }
windows-core = "0.60"
