[package]
name = "scap-direct3d"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "System",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Foundation_Metadata",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
] }
thiserror = "1.0"
tracing = "0.1"
